solved minor bug: background color of input-div for dark modes

--- a/frontend/src/pages/CSS/Login.css
+++ b/frontend/src/pages/CSS/Login.css
@@ -36,6 +36,7 @@ form {
     padding: 0.75rem 1rem;
     border-radius: 4px;
     border: 1px solid var(--border-light);
+    background-color: var(--border-light);
 }
 
 .login-signup-link {
